--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,10 +1,16 @@
+<input type="text" class="form-control" [(ngModel)]="carName">
 <button class="btn btn-primary" (click)="addCar()" >Добавить машину</button>
-<p>{{addCarStatus}}</p>
+<p *ngIf="!addCarStatus; else successStatus">Машина не добавлена</p>
+<ng-template #successStatus>
+  <p>Машина добавлена!</p>
+</ng-template>
 <hr>
-<app-car></app-car>
-<app-car></app-car>
 
-<hr>
 
-<input type="text" class="form-control" (keyup.enter)="onKeyUp($event)">
-<p>{{ inputText }}</p>
+<ul>
+  <li *ngFor="let date of dates; let idx = index">
+   <div>
+     <b>{{idx + 1}}</b> - <i>{{date | uppercase}}</i>
+   </div>
+  </li>
+</ul>
